Add spring-boot repackage for executable jar